glx/testdata/invalid/custom-vocab-edge-cases/vocabularies/event-types.glx
event_types:
  birth:
    label: "Birth"
    gedcom: "BIRT"


